# prrrrrrrrr

./: .gitignore  CLAUDE.md  README.md  cabal.project  install-ios.sh  install-wear.sh  install.sh  makefile  prrrrrrrrr.cabal  setup-ios.sh  shell.nix
.github/workflows/: ci.yaml
android/: AndroidManifest.xml
android/java/me/jappie/prrrrrrrrr/: MainActivity.java
android/res/values/: strings.xml
app/: Main.hs  MobileMain.hs
cbits/: jni_extras.c  storage_helper.c
nix/: android.nix  apk.nix  ci.nix  emulator-ui.nix  emulator.nix  hpkgs.nix  ios-app.nix  ios-device-app.nix  ios.nix
nix/nixpkgs-qemu-fix/: default.nix
npins/: sources.json
schema/: prrrrrrrrr-schema.cabal
schema/src/GymTracker/: Model.hs  Schema.hs
src/GymTracker/: App.hs  AppState.hs  Config.hs  Model.hs  Schema.hs  ServantNative.hs  Storage.hs  Sync.hs  Views.hs
src/HaskellMobile/: App.hs
src/Hatter/: App.hs
test/: Test.hs
