cabal-version:      3.0

name:           prrrrrrrrr
version:        0.1.0.0
homepage:       https://github.com/jappeace-sloth/prrrrrrrrr
bug-reports:    https://github.com/jappeace-sloth/prrrrrrrrr/issues
author:         Jappie Klooster
maintainer:     hi@jappie.me
copyright:      2026 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/jappeace-sloth/prrrrrrrrr

common common-options
  default-extensions:
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost

  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fno-omit-yields

  build-depends:
      base >=4.9.1.0 && <4.22.0

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
      Hatter.App
      GymTracker.AppState
      GymTracker.Config
      GymTracker.Model
      GymTracker.Storage
      GymTracker.Sync
      GymTracker.Views
      GymTracker.ServantNative
  reexported-modules:
      Hatter,
      Hatter.Types,
      Hatter.Lifecycle,
      Hatter.Widget,
      Hatter.Render
  hs-source-dirs:
      src
  build-depends:
      hatter,
      pr-sync-api,
      text,
      containers,
      sqlite-simple,
      servant,
      servant-client-core,
      http-types,
      http-media,
      case-insensitive,
      mtl,
      bytestring,
      time
  c-sources:
      cbits/storage_helper.c
  include-dirs:
      cbits

executable exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      prrrrrrrrr
  ghc-options: -Wno-unused-packages -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"

test-suite unit
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wno-unused-packages -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"
  hs-source-dirs:
      test
  build-depends:
      tasty,
      tasty-hunit,
      prrrrrrrrr,
      text,
      containers,
      servant-client-core,
      hatter,
      bytestring,
      http-types,
      time
