cabal-version:      3.0

name:           prrrrrrrrr-schema
version:        0.1.0.0
license:        MIT
build-type:     Simple

library
  exposed-modules:
      GymTracker.Model
      GymTracker.Schema
  hs-source-dirs:
      src
  build-depends:
      base >=4.9.1.0 && <4.22.0,
      text,
      persistent,
      persistent-sqlite,
      time
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
      ImportQualifiedPost
  ghc-options:
    -O2 -Wall -Werror
